# onchain_fraud_mev_detector

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  bacon.toml  deny.toml  justfile  lefthook.yml  production_readiness.md  rust-toolchain.toml
crates/api-error/: Cargo.toml
crates/api-error/src/: lib.rs
crates/arb-detector/: Cargo.toml
crates/arb-detector/src/: lib.rs
crates/arb-detector/tests/: property.rs
crates/arch-conformance/: Cargo.toml
crates/arch-conformance/src/: lib.rs
crates/arch-conformance/tests/: workspace.rs
crates/backtest/: Cargo.toml  baseline.json
crates/backtest/src/: baseline.rs  fixture.rs  fixtures.rs  lib.rs  main.rs  performance.rs  scoring.rs
crates/backtest/tests/: backtest.rs  baseline_snapshot.rs
crates/ch-migrate/: Cargo.toml
crates/ch-migrate/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20260702073556_simulation_stores.down.sql  20260702073556_simulation_stores.up.sql  20260703040000_intelligence_stores.down.sql  20260703040000_intelligence_stores.up.sql  20260709000000_intelligence_merge_log.down.sql  20260709000000_intelligence_merge_log.up.sql  20260710000000_rule_definitions.down.sql  20260710000000_rule_definitions.up.sql  20260718000000_notification_stores.down.sql  20260718000000_notification_stores.up.sql  20260719000000_rule_outbox.down.sql  20260719000000_rule_outbox.up.sql  20260724000000_screening_policies.down.sql  20260724000000_screening_policies.up.sql
crates/db/src/: lib.rs  redis.rs
crates/demo-detector/: Cargo.toml
crates/demo-detector/src/: lib.rs
crates/detection/: Cargo.toml  model_performance.json
crates/detection/src/: boot.rs  config.rs  ctx.rs  emit.rs  enrichment.rs  flags.rs  lib.rs  main.rs  metrics.rs  model.rs  registry.rs  reorg.rs  scheduler.rs  state.rs  test_util.rs
crates/detector-api/: Cargo.toml
crates/detector-api/src/: bps.rs  cross_block.rs  ctx.rs  enrichment.rs  lib.rs  plugin.rs  test_util.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: batch.rs  dlq.rs  lag.rs  lib.rs  test_util.rs  usage.rs
crates/event-store/: Cargo.toml
crates/event-store/migrations/: 0001_create_events.down.sql  0001_create_events.up.sql  0002_business_key_columns.down.sql  0002_business_key_columns.up.sql
crates/event-store/src/: config.rs  http.rs  kafka.rs  lib.rs  main.rs  metrics.rs  migrate.rs  query.rs  store.rs
crates/event-store/tests/: integration.rs
crates/events/: Cargo.toml  SCHEMA.md
crates/events/src/: chain.rs  detection.rs  intelligence.rs  lib.rs  predictive.rs  primitives.rs  rule_engine.rs  simulation.rs  system.rs
crates/events/tests/: proptest_round_trip.rs  wire_format.rs
crates/flashloan-detector/: Cargo.toml
crates/flashloan-detector/src/: lib.rs
crates/ingestion/: Cargo.toml
crates/ingestion-exex-node/: Cargo.toml  README.md
crates/ingestion-exex-node/src/: main.rs
crates/ingestion/src/: config.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  publisher.rs  tree.rs
crates/ingestion/tests/: failover.rs
crates/intelligence/: Cargo.toml  build.rs
crates/intelligence/migrations/: 0001_create_address_adjacency.down.sql  0001_create_address_adjacency.up.sql  0002_create_block_production.down.sql  0002_create_block_production.up.sql
crates/intelligence/proto/: intelligence.proto
crates/intelligence/src/: adjacency.rs  attribution.rs  bounded.rs  cache.rs  ch_migrate.rs  cluster.rs  config.rs  graph.rs  grpc.rs  leaderboard.rs  lib.rs  main.rs  merge_actor.rs  model.rs  pb.rs  production.rs  production_consumer.rs  production_source.rs  production_store.rs  reorg.rs  risk.rs  risk_scorer.rs  seed.rs  store.rs  test_util.rs  timeline.rs
crates/intelligence/tests/: stores.rs
crates/liquidation-detector/: Cargo.toml
crates/liquidation-detector/src/: lib.rs
crates/notification/: Cargo.toml
crates/notification/src/: config.rs  consumer.rs  delivery.rs  email_delivery.rs  http_delivery.rs  lib.rs  main.rs  model.rs  notice.rs  sink.rs  store.rs  subscriber_cache.rs  test_util.rs
crates/notification/tests/: store_contract.rs  webhook_delivery.rs
crates/predictive/: Cargo.toml
crates/predictive/src/: config.rs  decode.rs  intel_client.rs  lib.rs  main.rs  predict.rs  source.rs
crates/rule-engine/: Cargo.toml
crates/rule-engine/src/: action.rs  compile.rs  config.rs  consumer.rs  ctx.rs  enrich.rs  lib.rs  main.rs  model.rs  outbox.rs  state_store.rs  store.rs  temporal.rs  test_util.rs  webhook.rs  worker.rs
crates/rule-engine/tests/: engine_flow.rs  rule_store.rs  temporal_shell.rs  temporal_state.rs  webhook_delivery.rs
crates/sandwich-detector/: Cargo.toml
crates/sandwich-detector/src/: lib.rs
crates/sandwich-detector/tests/: property.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  http.rs  intelligence_client.rs  lib.rs  main.rs  metrics.rs  policy_store.rs  screen.rs  stream.rs  upstream.rs  usage.rs
crates/server/tests/: ws_stream.rs
crates/simulation/: Cargo.toml
crates/simulation/migrations/: 0001_create_incident_analytics.down.sql  0001_create_incident_analytics.up.sql
crates/simulation/src/: cache.rs  ch_migrate.rs  command.rs  config.rs  consumer.rs  dispatcher.rs  http.rs  lib.rs  main.rs  metrics.rs  projection.rs  projection_consumer.rs  queue.rs  reorg.rs  resolver.rs  result.rs  simulator.rs  store.rs  test_util.rs  topology.rs  worker.rs
crates/simulation/tests/: projection_store.rs  topology.rs  worker.rs
crates/telemetry/: Cargo.toml
crates/telemetry/examples/: trace_propagation.rs
crates/telemetry/src/: env.rs  health.rs  lib.rs  metrics.rs  propagation.rs
crates/telemetry/tests/: propagation.rs
crates/usage/: Cargo.toml
crates/usage/migrations/: 0001_create_usage_events.up.sql  0002_create_usage_rollup_daily.down.sql  0002_create_usage_rollup_daily.up.sql  0003_create_usage_rollup_mv.down.sql  0003_create_usage_rollup_mv.up.sql
crates/usage/src/: config.rs  kafka.rs  lib.rs  main.rs  migrate.rs  store.rs
crates/usage/tests/: integration.rs
crates/washtrading-detector/: Cargo.toml
(+145 files in other folders)
