[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "proprietary"
publish = false

# Shared dependency versions. Pin and reference these from member crates with
# `dep = { workspace = true }`. Add crates here as services start needing them.
[workspace.dependencies]
# Internal crates (path deps — resolved by the `crates/*` glob above).
events    = { path = "crates/events" }
telemetry = { path = "crates/telemetry" }
db        = { path = "crates/db" }
# Shared Kafka *producer* seam (§20): the `EventSink` trait + `KafkaEventSink` +
# the at-least-once `publish_resilient` policy, depended on by every event
# producer (ingestion, detection, …) so the producer config lives in one place.
event-bus = { path = "crates/event-bus" }
# Detection seam (§6): `detector-api` is the thin, stable contract every detector
# builds against — the `DetectorPlugin` trait + `DetectionCtx`/enrichment, and
# nothing of the service's internals. The `detection` service crate re-exports it
# and *optionally* depends on the detector crates to assemble the roster
# (`register_builtins`); the detectors depend only on `detector-api`. So the graph
# is `detection → {sandwich,arb} → detector-api ← detection` — acyclic — and a
# closed/premium detector (§6) needs only the small `detector-api`, not the whole
# service.
detector-api     = { path = "crates/detector-api" }
detection        = { path = "crates/detection" }
sandwich-detector = { path = "crates/sandwich-detector" }
arb-detector      = { path = "crates/arb-detector" }
# Dev/test-only synthetic detector (§19): fires on a fixed schedule regardless of
# tx content, so the per-detector metrics + emit path can be demoed while the live
# source is header-only. Linked only behind detection's `demo` feature.
demo-detector     = { path = "crates/demo-detector" }
# Simulation service (§7) — the slow path. Sprint 5 builds its front half: the
# `dispatcher` (a thin Kafka consumer on `PreliminaryAlertCreated` that publishes
# the one `SimulationJob` *command* onto RabbitMQ, §2/§7) plus the `JobSink` seam
# the worker pool (task 3) will drain. The command is deliberately *not* a
# `DomainEvent` and never touches the event store — only its result re-enters the
# backbone — so it lives here, not in `events`.
simulation = { path = "crates/simulation" }

# Errors.
anyhow = "1"
thiserror = "2"

# Serialization & domain primitives (event schema, §2).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Derive-driven enum metadata so variant→string mappings can't drift (§2).
strum = { version = "0.27", features = ["derive"] }
# Stable content hashing for the detection model registry (§6): a detector's
# active config is hashed into the `config_hash` stamped onto every
# `DetectorTriggered`, so an alert is reproducible against an exact build (§18).
# A real cryptographic digest, not a hand-rolled hasher — config_hash is an
# audit identifier where collision-resistance matters. Pure-Rust, no system
# deps (keeps the self-contained-image goal). Hex-encoded via alloy's `hex`.
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
# alloy is the project's chosen Ethereum stack (§21) — use its type-safe
# Address/B256/U256 in the event schema rather than stringly-typed hashes.
alloy-primitives = { version = "1", features = ["serde"] }

# Ingestion source adapter (§5, Sprint 2): the RPC failover pool talks JSON-RPC
# to the chain over alloy's provider — adapter #3 of §5 (reth ExEx / node-IPC
# adapters #1/#2 slot in behind the same trait in Phase 8). The pool, health
# checks and circuit breaker are hand-rolled on top; alloy just carries each
# request to one endpoint.
#   alloy-provider     — the `Provider` trait + `RootProvider::new_http`. The
#     `reqwest-rustls-tls` feature picks reqwest's *rustls* TLS so the binary
#     needs no system OpenSSL (same self-contained-image goal as the rdkafka
#     vendored build below) while still reaching https mainnet endpoints.
#   alloy-rpc-types-eth — the `Block`/`Header`/`BlockNumberOrTag` RPC types the
#     provider returns; we read header fields (hash, parent_hash, timestamp).
#   alloy-transport    — `TransportError`, the typed RPC/transport failure the
#     circuit breaker counts against an endpoint.
alloy-provider = { version = "1", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rpc-types-eth = "1"
alloy-transport = "1"
# Object-safe async trait for the `ChainSource` adapter seam (§5) so the service
# can hold a `dyn ChainSource` and swap adapters by config without generics
# rippling through it.
async-trait = "0.1"
# Parse + validate the configured RPC endpoint URLs once at boot.
url = "2"

# Async runtime (used by the trace-propagation demo; services adopt it as built).
# `net`/`signal`/`time` are for network services (axum listener, SIGTERM-driven
# graceful shutdown) — added when the event-store service landed (§4).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal", "time"] }

# RabbitMQ work-queue client (§7) — the one *command* broker. The simulation
# dispatcher publishes a `SimulationJob` to the durable `sim.jobs` quorum queue;
# the worker pool (Sprint 5 t3) drains it with per-job ack/redelivery. `lapin` is
# the de-facto async AMQP 0.9.1 client; it speaks publisher *confirms* (the
# at-least-once ack we need so a queued job is never silently lost) and per-message
# `priority`/`delivery_mode` (durable + priority 0–9, §7). lapin is executor-
# agnostic, so on tokio we hand it tokio's executor+reactor via these two adapter
# crates rather than letting it spin up its own `async-global-executor` threads —
# one runtime, no surprise thread pool. (The queue *topology* — quorum, priority
# args, dead-letter exchange — is declared in Sprint 5 t2, not here.)
lapin = "2"
tokio-executor-trait = "2"
tokio-reactor-trait = "1"

# CPU-bound work pool (§17): the detection service fans each block's Block-scoped
# detectors out over rayon (off the async reactor) — and the simulation workers
# (Sprint 5) run revm on it. A data-parallel pool, not async: the scheduler
# bridges to it via `spawn_blocking` so the reactor is never blocked.
rayon = "1"

# Event-store service (§4): HTTP append API + ClickHouse storage + Kafka ingest.
# axum    — internal append API (write-authenticated).
# clickhouse — official client; RowBinary inserts via `#[derive(Row)]`. The
#   `uuid` feature pulls in the UUID column (de)serializer (ClickHouse byte order).
# rdkafka — librdkafka bindings for the consumer (consumer groups + manual offset
#   commit). The default (configure-based) vendored build is used deliberately:
#   it auto-`--disable`s the optional curl/ssl/gssapi/zstd deps we don't enable,
#   so it compiles on a bare runner (CI, the slim Docker image) needing only a C
#   toolchain + make, and yields a near-self-contained binary (libz only) — right
#   for our PLAINTEXT Kafka. `cmake-build` is intentionally NOT used: cmake hard-
#   requires curl headers and broke CI. Production SASL_SSL: add the `ssl`/`sasl`
#   features here + the matching system libs in CI/Dockerfile when that lands.
#   `tokio` enables the async StreamConsumer.
axum = "0.8"
clickhouse = { version = "0.15", features = ["uuid", "chrono"] }
rdkafka = { version = "0.39", features = ["tokio"] }
# Production hardening for the network service:
# tower-http — TraceLayer (HTTP spans into the existing OTel stack) + TimeoutLayer.
# tokio-util — CancellationToken for cooperative, drain-then-exit shutdown.
# secrecy    — keep passwords/tokens out of `Debug`/logs; explicit `expose_secret()`.
# subtle     — audited constant-time comparison for the bearer token.
tower-http = { version = "0.7", features = ["trace", "timeout"] }
tokio-util = "0.7"
secrecy = "0.10"
subtle = "2"

# Property-based testing (§18, Sprint 4 task 4): generate the *whole value space*
# of an input and assert an invariant holds across all of it, shrinking to a
# minimal counterexample on failure. Used for the detector invariants (a planted
# MEV pattern in arbitrary block noise is always found; every emitted finding is
# structurally valid) and the `DomainEvent` codec-totality round trip
# (`deserialize(serialize(x)) == x`) — the schema follow-up carried from Sprint 1.
# A dev-dependency only, never linked into a shipped binary.
proptest = "1"

# Integration testing against real ClickHouse/Kafka via throwaway containers
# (the `#[ignore]` tests CI's integration-test job runs).
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["clickhouse", "kafka"] }

# OpenAPI/Swagger. `utoipa` derives the spec from the types & handlers; the
# `chrono`/`uuid` features teach it those field types. `utoipa-swagger-ui` serves
# the interactive UI (its `axum` feature provides the router integration). The
# `events` crate gates its `ToSchema` derives behind an `openapi` feature so the
# schema crate stays dependency-free unless a service opts in.
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Observability (§19): tracing + W3C trace-context distributed tracing.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"

# Application metrics (§19): `metrics` is the lightweight facade a service records
# through at the call site (e.g. per-detector hit/latency). The recording is a
# near-free no-op until an exporter installs the global recorder, so the hot path
# needn't know whether anything is scraping. `metrics-exporter-prometheus` is that
# exporter — installed once per service (like `telemetry::init`), it owns the
# global recorder and serves the `/metrics` Prometheus scrape endpoint on its own
# HTTP listener (`http-listener`; the unused push-gateway path is trimmed).
# `metrics-util` is the test-only in-memory recorder used to assert on recorded
# series without standing up a scrape.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
metrics-util = "0.20"

# Lints defined once, inherited by every crate via `[lints] workspace = true`.
# This is what makes `cargo build`/`clippy` enforce the same bar locally that CI
# does with `-D warnings`, instead of devs first learning about a lint in CI.
[workspace.lints.rust]
# No first-party `unsafe` in this codebase — a fraud/security system's own code
# stays safe. `forbid` (stronger than `deny`) can't be silently overridden with
# `#[allow]`; if a hot path ever genuinely needs unsafe, downgrade this to
# "deny" here, as a deliberate, reviewed workspace-level decision.
unsafe_code = "forbid"

[workspace.lints.clippy]
# Deny the default clippy lints (mirrors CI). `priority = -1` so individual
# lints below could override it; we keep none for now.
all = { level = "deny", priority = -1 }
